--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 .lobster {
     font-family: 'Lobster', cursive !important;
 }
+
+body::after {
+    content: "";
+    background: url("https://png.pngtree.com/thumb_back/fw800/background/20190828/pngtree-delicious-chicken-soup-background-with-potatoes-boiled-egg-chinese-onion-and-image_307743.jpg");
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
+  }
